--- a/Bogholderen/src/assets/i18n/da.json
+++ b/Bogholderen/src/assets/i18n/da.json
@@ -1,4 +1,11 @@
 {
+	"address": {
+		"addressline1": "Adresse linje 1",
+		"addressline2": "Adresse linje 2",
+		"city": "By",
+		"country": "Land",
+		"zipcode": "Post nr."
+	},
 	"customers": {
 		"title": "Kunder"
 	},
@@ -15,6 +22,7 @@
 		"title": "Projekter"
 	},
 	"users": {
+		"address": "Adresse",
 		"address_id": "Adresse id",
 		"email": "Email",
 		"firstname": "Fornavn",
