igang med at kopiere medarbejdere ind
 db - skal update igen (slet først)
mangler controller, html-overview færdig og navigation

--- a/Bogholderen/src/assets/i18n/da.json
+++ b/Bogholderen/src/assets/i18n/da.json
@@ -29,8 +29,10 @@
 		"required": "skal udfyldes"
 	},
 	"success": {
+		"employeedeleted": "Medarbejder slettet",
 		"success": "Succes",
 		"usercreated": "Ny bruger oprettet",
+		"userdeleted": "Bruger slettet",
 		"userupdated": "Bruger opdateret"
 	},
 	"users": {
