--- a/Bogholderen/src/assets/i18n/da.json
+++ b/Bogholderen/src/assets/i18n/da.json
@@ -10,6 +10,8 @@
 		"title": "Kunder"
 	},
 	"employees": {
+		"jobtitle": "Stilling",
+		"salary": "Løn",
 		"title": "Medarbejdere"
 	},
 	"error": {
