--- a/Bogholderen/src/assets/i18n/en.json
+++ b/Bogholderen/src/assets/i18n/en.json
@@ -10,6 +10,8 @@
 		"title": "Customers"
 	},
 	"employees": {
+		"jobtitle": "Job title",
+		"salary": "Salary",
 		"title": "Employees"
 	},
 	"error": {
