--- a/Bogholderen/src/assets/i18n/da.json
+++ b/Bogholderen/src/assets/i18n/da.json
@@ -8,8 +8,9 @@
 	},
 	"customers": {
 		"companyname": "Firmanavn",
-		"contactperson": "Kontaktperson",
+		"contactperson": "Kontakt person",
 		"title": "Kunder",
+		"vatnumber": "CVR nr",
 		"websiteurl": "Hjemmeside"
 	},
 	"employees": {
