--- a/Bogholderen/src/assets/i18n/en.json
+++ b/Bogholderen/src/assets/i18n/en.json
@@ -10,6 +10,7 @@
 		"companyname": "Company name",
 		"contactperson": "Contact person",
 		"title": "Customers",
+		"vatnumber": "Vat number",
 		"websiteurl": "Website "
 	},
 	"employees": {
