--- a/Bogholderen/src/assets/i18n/da.json
+++ b/Bogholderen/src/assets/i18n/da.json
@@ -82,7 +82,7 @@
     "username": "Brugernavn"
   },
   "hours": {
-    "totalhours": "Timer i alt",
+    "totalhours": "Timer registreret i alt",
     "estimatedhours": "Estimerede timer",
     "remaininghours": "Timer tilbage",
     "hourstoregistrate": "Timer at registrere",
