--- a/Bogholderen/src/assets/i18n/da.json
+++ b/Bogholderen/src/assets/i18n/da.json
@@ -86,7 +86,8 @@
     "estimatedhours": "Estimerede timer",
     "remaininghours": "Timer tilbage",
     "hourstoregistrate": "Timer at registrere",
-    "registrationdate": "Registrerings dato"
+    "registrationdate": "Registrerings dato",
+    "pricefornow":  "Pris til dato"
 
   }
 }
