--- a/Bogholderen/src/assets/i18n/en.json
+++ b/Bogholderen/src/assets/i18n/en.json
@@ -91,7 +91,8 @@
     "userdeleted": "User deleted",
     "userupdated": "User updated",
     "hoursregistrated": "Hours registrated",
-    "loggedin": "Logging in"
+    "loggedin": "Logging in",
+    "hoursdeleted": "Hours deleted"
   },
   "users": {
     "address": "Address",
