--- a/Bogholderen/src/assets/i18n/da.json
+++ b/Bogholderen/src/assets/i18n/da.json
@@ -91,7 +91,8 @@
     "userdeleted": "Bruger slettet",
     "userupdated": "Bruger opdateret",
     "hoursregistrated": "Timer registreret",
-    "loggedin": "Logger ind"
+    "loggedin": "Logger ind",
+    "hoursdeleted":  "Timer slettet"
   },
   "users": {
     "address": "Adresse",
